traversal.snake.Snake.scala.error
Compilation error:
Snake:2: warning: enclosing method positionFinale has result type Unit: return value discarded
                                           if (estFaceMur() && getDirection() == Direction.OUEST) {droite();return estFaceMur();}
                                                                                                            ^Snake:3: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
                                          else {return false}}
                                                       ^Snake:3: warning: enclosing method positionFinale has result type Unit: return value discarded
                                          else {return false}}
                                                ^Snake:5: error: value unary_! is not a member of Unit
                    def marche() {while (!positionFinale()) 
                                         ^